--- a/CSS Assignments/Student Registration Form.html
+++ b/CSS Assignments/Student Registration Form.html
@@ -379,6 +379,21 @@ B.A
 </td>
 </tr>
 
+<!-- How know about FTFL -->
+<tr>
+<td>HOW DID YOU KNOW ABOUT FTFL?</td>
+<td><fieldset style="margin: 1em; text-align: center;">
+		<legend>Select how you know about FTFL: </legend>
+		<input type="radio" name="hero"  value="Newspaper" onclick="displayHero(this)" /> Newspaper
+		<input type="radio" name="hero"  value="Seminar" onclick="displayHero(this)" /> Seminar
+		<input type="radio" name="hero"  value="Website" onclick="displayHero(this)" /> Internet
+		<input type="radio" name="hero"  value="TV Channel" onclick="displayHero(this)" /> TV Channel
+		<input type="radio" name="hero"  value="Radio Channel" onclick="displayHero(this)" /> Radio Channel
+		<div style="height: 1em;" />
+		</fieldset>
+</td>
+</tr>
+
 <!-- Hobbies -->
  
 <tr>
@@ -391,7 +406,7 @@ Singing
 <input type="checkbox" name="Hobby_Singing" value="Singing" />
 Dancing
 <input type="checkbox" name="Hobby_Dancing" value="Dancing" />
-Sketching
+Cooking
 <input type="checkbox" name="Hobby_Cooking" value="Cooking" />
 <br />
 Others
