--- a/CSS Assignments/Student Registration Form.html
+++ b/CSS Assignments/Student Registration Form.html
@@ -400,6 +400,75 @@ ITSS
 </td>
 </tr>
 
+/*
+
+				
+
+				<div>
+					<label>Training (if any): </label>
+					<input type="week" name="week"/>
+				</div>
+
+				<div>
+					<label>Are you doing any job? </label>
+					<input type="checkbox" name="job" value="yes">Yes
+					<input type="checkbox" name="job" value="no">No
+				</div>
+
+				<div>
+					<label>Year(s) of experience(0-10; step-1): </label>
+					<input type="number" name="numberText" placeholder="Enter year" min="0" max="10" step="1" value="1"/>
+				</div>
+*/
+
+<!-- SubTrack -->
+<tr>
+<td>PREFERABLE SUBTRACK</td>
+
+<td>
+<select name="Subtrack" multiple="multiple"> 
+						<optgroup label="ITS">
+					    	<option value="laravel" selected="selected">Laravel</option>
+					    	<option value="asp-dot-net">ASP.net</option>
+					    	<option value="gaming">Gaming</option>
+					  	</optgroup>
+					  	<optgroup label="ITSS">
+					    	<option value="net">Networking</option>
+					    	<option value="hard">Hardware Engineering</option>
+					  	</optgroup>
+					  	<optgroup label="ITES">
+					    	<option value="graphics">Graphics</option>
+						    <option value="seo">SEO</option>
+					  	</optgroup>
+					  	<optgroup label="Management">
+					    	<option value="hrm">HRM</option>
+					    	<option value="mar">Marketing</option>
+					    	<option value="fin">Finance</option>
+					    	<option value="acc">Accounting</option>
+					  	</optgroup>
+					</select>
+ (YOU CAN SELECT MULTIPLE PRESSING CTRL)		
+</td>
+</tr>
+
+<!-- training -->
+<tr>
+<td>TRAINING (IF ANY)</td>
+<td>
+<input type="week" name="week"/>
+ DURATION IN WEEK
+</td>
+</tr>
+
+<!-- Job -->
+<tr>
+<td>DO YOU HAVE JOB?</td>
+<td>
+<input type="checkbox" name="job" value="yes">Yes
+<input type="checkbox" name="job" value="no">No
+</td>
+</tr>
+
 <!-- How know about FTFL -->
 <tr>
 <td>HOW DID YOU KNOW ABOUT FTFL?</td>
