Make some change

--- a/CSS Assignments/Registration_Form.html
+++ b/CSS Assignments/Registration_Form.html
@@ -371,7 +371,7 @@ Female <input type="radio" name="Gender" value="Female" />
  
 <!-- Track -->
 <tr>
-<td>TRACKS<br />APPLIED FOR</td>
+<td>APPLY FOR <br />TRACKS (SELECT TWO)</td>
 <td>
 ITS
 <input type="radio" name="Track_ITS" value="ITS">
@@ -381,6 +381,7 @@ ITES
 <input type="radio" name="Track_ITES" value="ITES">
 ITSS
 <input type="radio" name="Track_ITSS" value="ITSS">
+
 </td>
 </tr>
 
