--- a/Java Script/practice for quiz.html
+++ b/Java Script/practice for quiz.html
@@ -1,11 +1,27 @@
 <script>
 	//alert("Hello FTFL");//small information
-	document.write("Hello FTFL ");
+	//document.write("Hello FTFL");
 	//document.writeln("Hello FTFL");
 	//console.log("Hi");//develoeprs only
 	
 	//confirm("Are you sure you want to delete?");
 	//prompt("What is your name","e.g Jahangir");
+
+	//defining variable
+	 var aVariable = 12;
+	anothervariable = 10;
+	var aStringVariable = "Hello FTFL";
+	var anStringVar = ', how are you?';
+	var aNumberLikeStringVariable = '1111';
+	var aBoolean = true;
+	var anEmptyValue = "";//''
+	var anEmptySpace = "  ";//'  '
+	var aNumber0 = 0;
+	var aNumberLikeString0 = '0';
+	var aNullValue = null;
+	var ftfl01;
+
+
 
 	
 </script>Hello World
