--- a/Java Script/practice for quiz.html
+++ b/Java Script/practice for quiz.html
@@ -13,7 +13,29 @@
 	var aStringVariable = "Hello FTFL";
 	var anStringVar = ', how are you?';
 	var aNumberLikeStringVariable = '1111';
-	
+	var aBoolean = true;
+	var anEmptyValue = "";//''
+	var anEmptySpace = "  ";//'  '
+	var aNumber0 = 0;
+	var aNumberLikeString0 = '0';
+	var aNullValue = null;
+	var ftfl01;
+	//data type
+	/*console.log(aVariable);
+	console.log(anothervariable);
+	console.log(typeof aVariable);
+	console.log(typeof anothervariable);
+	console.log(aStringVariable);
+	console.log(typeof aStringVariable);
+	console.log(typeof aNumberLikeStringVariable);
+	console.log(aBoolean);
+	console.log(typeof aBoolean);
+	console.log(typeof anEmptyValue);
+	console.log(typeof anEmptySpace);
+	console.log(typeof aNumber0);
+	console.log(typeof aNumberLikeString0);
+	console.log(aNullValue);
+	console.log(typeof aNullValue);
 
 
 
