--- a/Java Script/practice for quiz.html
+++ b/Java Script/practice for quiz.html
@@ -21,21 +21,21 @@
 	var aNullValue = null;
 	var ftfl01;
 	//data type
-	/*console.log(aVariable);
-	console.log(anothervariable);
-	console.log(typeof aVariable);
-	console.log(typeof anothervariable);
-	console.log(aStringVariable);
-	console.log(typeof aStringVariable);
-	console.log(typeof aNumberLikeStringVariable);
-	console.log(aBoolean);
-	console.log(typeof aBoolean);
-	console.log(typeof anEmptyValue);
-	console.log(typeof anEmptySpace);
-	console.log(typeof aNumber0);
-	console.log(typeof aNumberLikeString0);
-	console.log(aNullValue);
-	console.log(typeof aNullValue);
+	console.log(aVariable); //12
+	console.log(anothervariable);//10
+	console.log(typeof aVariable);//number
+	console.log(typeof anothervariable);//number
+	console.log(aStringVariable);//Hello FTFL
+	console.log(typeof aStringVariable);//string
+	console.log(typeof aNumberLikeStringVariable);//string
+	console.log(aBoolean);//true
+	console.log(typeof aBoolean);//boolean
+	console.log(typeof anEmptyValue);//string
+	console.log(typeof anEmptySpace);//string
+	console.log(typeof aNumber0);//number
+	console.log(typeof aNumberLikeString0);//string
+	console.log(aNullValue);//null
+	console.log(typeof aNullValue);//object
 
 
 
