--- a/Java Script/practice for quiz.html
+++ b/Java Script/practice for quiz.html
@@ -21,7 +21,7 @@
 	var aNullValue = null;
 	var ftfl01;
 	//data type
-	console.log(aVariable); //12
+	/*console.log(aVariable); //12
 	console.log(anothervariable);//10
 	console.log(typeof aVariable);//number
 	console.log(typeof anothervariable);//number
@@ -36,6 +36,26 @@
 	console.log(typeof aNumberLikeString0);//string
 	console.log(aNullValue);//null
 	console.log(typeof aNullValue);//object
+	*/
+
+	try{
+		console.log(ftfl);
+		console.log(typeof ftfl);
+	}catch(error){
+		console.log(typeof error);
+		console.log(error.name);
+		console.log(error.message);
+	}
+
+	console.log(ftfl);
+	console.log(typeof ftfl);
+
+	console.log(ftfl01);
+	console.log(typeof ftfl01);
+
+	console.log(ftfl02);
+	console.log(typeof ftfl02);	
+	var ftfl02;
 
 
 
