data type  & variable define end

--- a/Java Script/practice for quiz.html
+++ b/Java Script/practice for quiz.html
@@ -36,7 +36,7 @@
 	console.log(typeof aNumberLikeString0);//string
 	console.log(aNullValue);//null
 	console.log(typeof aNullValue);//object
-	*/
+	
 
 	try{
 		console.log(ftfl);
@@ -46,9 +46,7 @@
 		console.log(error.name);
 		console.log(error.message);
 	}
-
-	console.log(ftfl);
-	console.log(typeof ftfl);
+	
 
 	console.log(ftfl01);
 	console.log(typeof ftfl01);
@@ -56,6 +54,20 @@
 	console.log(ftfl02);
 	console.log(typeof ftfl02);	
 	var ftfl02;
+	*/
+
+	//console.log(ftfl03);
+	//console.log(typeof ftfl03);	
+	//var ftfl03 = "Lucky?";
+	///console.log(ftfl03);
+	//console.log(typeof ftfl03);	
+	
+	console.log(window);
+	console.log(this);//global scope
+	console.log(self);
+	
+	console.log(window.ftfl03);
+	this.alert('this.alert');
 
 
 
