window, this, self

--- a/Java Script/practice for quiz.html
+++ b/Java Script/practice for quiz.html
@@ -58,7 +58,7 @@
 
 	//console.log(ftfl03);
 	//console.log(typeof ftfl03);	
-	//var ftfl03 = "Lucky?";
+	var ftfl03 = "Lucky?";
 	///console.log(ftfl03);
 	//console.log(typeof ftfl03);	
 	
