--- a/Java Script/practice for quiz.html
+++ b/Java Script/practice for quiz.html
@@ -54,11 +54,11 @@
 	console.log(ftfl02);
 	console.log(typeof ftfl02);	
 	var ftfl02;
-	*/
+	
 
 	//console.log(ftfl03);
 	//console.log(typeof ftfl03);	
-	var ftfl03 = "Lucky?";
+	//var ftfl03 = "Lucky?";
 	///console.log(ftfl03);
 	//console.log(typeof ftfl03);	
 	
@@ -68,6 +68,33 @@
 	
 	console.log(window.ftfl03);
 	this.alert('this.alert');
+	*/
+
+	console.log("aStringVariable" in window)
+	//Overloaded + operator
+	//two numbers
+	console.log(aVariable + anothervariable);
+	//two strings
+	console.log(aStringVariable + anStringVar);
+	//a number + a String
+	console.log(aVariable + aNumberLikeString0);
+	
+	var aMultipliedVal = aVariable * anStringVar;
+	console.log(aMultipliedVal);
+	console.log(typeof aMultipliedVal);
+	
+	console.log(isNaN(aMultipliedVal));
+	
+	console.log(Number('afds'));
+	console.log(Number('afds123'));
+	console.log(Number('123afds'));
+	console.log(Number('123.12'));
+
+	console.log(parseInt('afds'));
+	console.log(parseInt('afds123'));
+	console.log(parseInt('123afds'));
+	console.log(parseInt('123.72'));
+	
 
 
 
