--- a/Java Script/practice for quiz.html
+++ b/Java Script/practice for quiz.html
@@ -68,7 +68,7 @@
 	
 	console.log(window.ftfl03);
 	this.alert('this.alert');
-	*/
+	
 
 	console.log("aStringVariable" in window)
 	//Overloaded + operator
@@ -94,7 +94,25 @@
 	console.log(parseInt('afds123'));
 	console.log(parseInt('123afds'));
 	console.log(parseInt('123.72'));
+	*/
+
+	var aVar; //undefined = false
+	var aVar = 0;//false
+	var aVar = null;//false
+	var aVar = '';//false
+	var aVar = false;
 	
+	var aVar = 'string';//true
+	var aVar = 123;//true	
+	var aVar = '0'; //true	
+	var aVar = ' ';//true
+	
+	if(aVar){
+		console.log('I am treated as true');
+	}else{
+		console.log('I am treated as false');
+	}
+
 
 
 
