--- a/Java Script/practice for quiz.html
+++ b/Java Script/practice for quiz.html
@@ -115,17 +115,17 @@
 	*/
 
 	//regular declaration of a function	
-	function addTwoumbers(){		
+	function addTwoNumbers(){		
 		//var sum = num1+num2;
 		sum = arguments[0]+arguments[1];
 		return sum;
 	}
 	//function call
-	var result = addTwoumbers(4,2);
+	var result = addTwoNumbers(4,2);
 	console.log(result);
 
-	var addNumbers = addTwoumbers;
-	console.log(addNumbers(5,6));
+	//var addNumbers = addTwoumbers;
+	console.log(addTwoNumbers(5,6));
 
 
 
