--- a/Java Script/practice for quiz.html
+++ b/Java Script/practice for quiz.html
@@ -127,6 +127,12 @@
 	//var addNumbers = addTwoumbers;
 	console.log(addTwoNumbers(5,6));
 
+	//function literal
+	var addThreeNumbers = function(){
+		return arguments[0] + arguments[1] + arguments[2];
+	}
+	console.log(addThreeNumbers(5,6,7));
+
 
 
 	
