--- a/Java Script/practice for quiz.html
+++ b/Java Script/practice for quiz.html
@@ -133,7 +133,15 @@
 	}
 	console.log(addThreeNumbers(5,6,7));
 
-
+	//self executing function
+	console.log((function(){
+		return arguments[0] 
+		+ arguments[1] 
+		+ arguments[2];
+	})(2,3,4,5));
+	
+	//bullet proof self executing
+	//;(function(){alert('hello')})();
 
 	
 </script>Hello World
