--- a/Java Script/practice for quiz.html
+++ b/Java Script/practice for quiz.html
@@ -112,7 +112,7 @@
 	}else{
 		console.log('I am treated as false');
 	}
-	*/
+	
 
 	//regular declaration of a function	
 	function addTwoNumbers(){		
@@ -175,6 +175,14 @@
 	/*function func(x,y,z){
 		return x*y*z;
 	}*/
+
+	//Defining an Array using Array Literal
+	var anArrLiteral = [];
+	var car = ['sedan',['apple','orange'],'fereri','Audi']
+	console.log(typeof anArrLiteral);
+	console.log(car);
+	console.log(car[1][1]);
+	console.log(car[0][1]);
 
 	
 </script>Hello World
