--- a/Java Script/jsevent.html
+++ b/Java Script/jsevent.html
@@ -1,6 +1,16 @@
 <html>
 <head>
 <title>Understanding event & Event handler registration</title>
+<style>
+	img{
+		display:none;
+	}
+	img[alt='game']{
+		display:block;
+	}
+
+
+</style>
 </head>
 <body>
 <div role="article">
@@ -16,14 +26,14 @@
 </div>
 <nav role="gallery navigator">
 <ul>
-<li><a href="#" onclick = "alert('Hi, this link is activated')">Game</a></li>
+<li><a href="http://www.yahoo.com" onclick = "alert('Hi, this link is activated')">Game</a></li>
 <li><a href="#">Abstruct</a> </li>
 <li><a href="#">People</a> </li>	
 </ul>
 </nav>
 <form>
 <input id="fullName" name="fullName">	
-<button name ="butoclick" onclick = "alert('Hi, I am Clicked')"> Click Me</button>
+<button name ="butoclick" onclick = "alert('Hi, I am Clicked'); return false;"> Click Me</button>
 </form>
 <script>
 ;(function(){
