--- a/Java Script/jsevent.html
+++ b/Java Script/jsevent.html
@@ -33,7 +33,7 @@
 </nav>
 <form>
 <input id="fullName" name="fullName">	
-<button name ="butoclick" onclick = "return validateName()"> Click Me</button>
+<button id ="btnToClick" name ="btnToClick"> Click Me</button>
 </form>
 <script>
 function validateName(){
@@ -52,7 +52,8 @@ function validateName(){
 }
 ;(function(){
 
-
+		var btnToClick = document.getElementById('btnToClick');
+		btnToClick.addEventListener('click', validateName, false);
 })();
 </script>
 </body>
