--- a/Java Script/practice for quiz.html
+++ b/Java Script/practice for quiz.html
@@ -251,7 +251,7 @@
 	console.log(Car.wheel);
 	console.log(Car.drive());
 	console.log(typeof Car);
-	*/
+	
 
 	//Defining Object using a Constructor Function
 	
@@ -270,7 +270,9 @@
 	console.log(mycar1.make);
 	console.log(mycar2.make);
 	console.log(mycar2.drive());
+	*/
 	
+	alert(Number('12sds'));
 
 	
-</script>Hello World
+</script>
