--- a/CSS Assignments/Registration_Form.html
+++ b/CSS Assignments/Registration_Form.html
@@ -163,7 +163,7 @@
 <!-- Age -->
 <tr>
 <td>ENTER YOUR AGE (RANGE 25-30)</td>					
-<td><input type="range" min="25" max="30" step="1" value="25" name="rangeValue" required="required"/></td>
+<td><input type="age" min="25" max="30" step="1" value="25" name="ageValue" required="required"/></td>
 </tr>
  
 <!-- Email Id -->
