--- a/CSS Assignments/company_home.html
+++ b/CSS Assignments/company_home.html
@@ -12,7 +12,7 @@
 </head>
  
 <body>
-<img alt="header" width=100% align="center" src="image/banner.jpg" />
+<img alt="header" width= 500px align="center" src="image/banner.jpg" />
  
 <table align="center" cellpadding = "10">
 
