--- a/CSS Assignments/Registration_Form.html
+++ b/CSS Assignments/Registration_Form.html
@@ -163,7 +163,7 @@
 <!-- Age -->
 <tr>
 <td>ENTER YOUR AGE (RANGE 25-30)</td>					
-<td><input type="age" min="25" max="30" step="1" name="ageValue" required="required"/></td>
+<td><input type="number" min="25" max="30" name="ageValue" required="required"/></td>
 </tr>
  
 <!-- Email Id -->
@@ -314,12 +314,12 @@ Female <input type="radio" name="Gender" value="Female" />
 <table>
  
 <tr>
-<td align="center"><b>Sl.No.</b></td>
-<td align="center"><b>Examination</b></td>
-<td align="center"><b>Board</b></td>
-<td align="center"><b>Subject</b></td>
-<td align="center"><b>Grade</b></td>
-<td align="center"><b>Year of Passing</b></td>
+<td><b>Sl.No.</b></td>
+<td><b>Examination</b></td>
+<td><b>Board</b></td>
+<td><b>Subject</b></td>
+<td><b>Grade</b></td>
+<td><b>Year of Passing</b></td>
 </tr>
  
 <tr>
@@ -361,8 +361,8 @@ Female <input type="radio" name="Gender" value="Female" />
 <tr>
 <td></td>
 <td></td>
-<td align="center">(10 char max)</td>
-<td align="center">(upto 2 decimal)</td>
+<td>(10 char max)</td>
+<td>(upto 2 decimal)</td>
 </tr>
 </table>
  
@@ -468,7 +468,8 @@ ITSS
 		<input type="radio" name="hero"  value="Website" onclick="displayHero(this)" /> Internet
 		<input type="radio" name="hero"  value="TV Channel" onclick="displayHero(this)" /> TV Channel
 		<input type="radio" name="hero"  value="Radio Channel" onclick="displayHero(this)" /> Radio Channel
-		<div style="height: 1em;" />
+		<div style="height: 1em;">
+		</div>	
 		</fieldset>
 </td>
 </tr>
@@ -496,7 +497,7 @@ Others
  
 <!-- Submit and Reset -->
 <tr>
-<td colspan="2" align="center">
+<td colspan="2">
 <input type="submit" value="Submit">
 <input type="reset" value="Reset">
 </td>
