redesign form page using CSS

--- a/CSS Assignments/Registration_Form.html
+++ b/CSS Assignments/Registration_Form.html
@@ -314,12 +314,12 @@ Female <input type="radio" name="Gender" value="Female" />
 <table>
  
 <tr>
-<td><b>Sl.No.</b></td>
-<td><b>Examination</b></td>
-<td><b>Board</b></td>
-<td><b>Subject</b></td>
-<td><b>Grade</b></td>
-<td><b>Year of Passing</b></td>
+<td style="text-align: center;"<b>Sl.No.</b></td>
+<td style="text-align: center;"><b>Examination</b></td>
+<td style="text-align: center;"><b>Board</b></td>
+<td style="text-align: center;"><b>Subject</b></td>
+<td style="text-align: center;"><b>Grade</b></td>
+<td style="text-align: center;"><b>Year of Passing</b></td>
 </tr>
  
 <tr>
@@ -361,8 +361,8 @@ Female <input type="radio" name="Gender" value="Female" />
 <tr>
 <td></td>
 <td></td>
-<td>(10 char max)</td>
-<td>(upto 2 decimal)</td>
+<td style="text-align: center;">(10 char max)</td>
+<td style="text-align: center;">(upto 2 decimal)</td>
 </tr>
 </table>
  
@@ -497,9 +497,14 @@ Others
  
 <!-- Submit and Reset -->
 <tr>
-<td colspan="2">
+<td colspan="2" style="text-align: center;">
 <input type="submit" value="Submit">
 <input type="reset" value="Reset">
+</td>
+</tr>
+
+<tr>
+<td> 
 </td>
 </tr>
 </table>
