--- a/CSS Assignments/Registration_Form.html
+++ b/CSS Assignments/Registration_Form.html
@@ -163,7 +163,7 @@
 <!-- Age -->
 <tr>
 <td>ENTER YOUR AGE (RANGE 25-30)</td>					
-<td><input type="number" min="25" max="30" name="ageValue" required="required"/></td>
+<td><input type="text" name="agenumberText"/></td>
 </tr>
  
 <!-- Email Id -->
