redesign company page using CSS

--- a/CSS Assignments/company_home.html
+++ b/CSS Assignments/company_home.html
@@ -12,9 +12,9 @@
 </head>
  
 <body>
-<img alt="header" width= 500px align="center" src="image/banner.jpg" />
+<img alt="header" class="center" src="image/banner.jpg" />
  
-<table align="center" cellpadding = "10">
+<table class="center2">
 
 
 <tr>
@@ -63,9 +63,9 @@
 
 			<p>If you select our coampny, you will receive the message <samp>You will get EASY SOLUTION for EASY LIFE</samp>.</p>
 			
-			<p>Here is a quote from our memodendurum:</p>
+			<p class="center1" >Here is a quote from our memodendurum:</p>
 			
-			<blockquote>Mission - is to make technology an asset for businesses which will deliver long-term commercial benefits through sate-of-the-art technology, <em>really</em> improved IT efficiency, business profitability innovations to make a positive differences in businesses</blockquote>
+			<blockquote class="center1">Mission - is to make technology an asset for businesses which will deliver long-term commercial benefits through sate-of-the-art technology, <em>really</em> improved IT efficiency, business profitability innovations to make a positive differences in businesses</blockquote>
 
 </td>
 </tr>
@@ -223,10 +223,6 @@
 			<param name="movie" value="flash/penguin.swf" />
 			<param name="quality" value="high" />
 			</object>
-
-			<iframe src="http://www.w3schools.com">
-  			<p>Your browser does not support iframes.</p>
-			</iframe>
 
 
 			<nav>
