[attribute^=value] Selector

--- a/All Assignments/CSS Assignments/company_home.html
+++ b/All Assignments/CSS Assignments/company_home.html
@@ -31,7 +31,7 @@
 			
 			<span>Greetings from GORZON SOLUTIONS PVT. LTD </span>
 			
-			<h1>Greetings from GORZON SOLUTIONS PVT. LTD </h1>
+			<h1 class="top-header">Greetings from GORZON SOLUTIONS PVT. LTD </h1>
 			
 			<h2>Greetings from GORZON SOLUTIONS PVT. LTD </h2>
 			
