[attribute$=value] Selector

--- a/All Assignments/CSS Assignments/company_home.html
+++ b/All Assignments/CSS Assignments/company_home.html
@@ -33,7 +33,7 @@
 			
 			<h1 class="top-header">Greetings from GORZON SOLUTIONS PVT. LTD </h1>
 			
-			<h2>Greetings from GORZON SOLUTIONS PVT. LTD </h2>
+			<h2 class="first_test">Greetings from GORZON SOLUTIONS PVT. LTD </h2>
 			
 			<h3>Greetings from GORZON SOLUTIONS PVT. LTD </h3>
 			
