--- a/All Assignments/CSS Assignments/company_home.html
+++ b/All Assignments/CSS Assignments/company_home.html
@@ -35,7 +35,7 @@
 			
 			<h2 class="first_test">Greetings from GORZON SOLUTIONS PVT. LTD </h2>
 			
-			<h3>Greetings from GORZON SOLUTIONS PVT. LTD </h3>
+			<h3 class="my-test">Greetings from GORZON SOLUTIONS PVT. LTD </h3>
 			
 			<h4>Greetings from GORZON SOLUTIONS PVT. LTD </h4>
 			
