--- a/All Assignments/CSS Assignments/company_home.html
+++ b/All Assignments/CSS Assignments/company_home.html
@@ -25,7 +25,7 @@
 			<acronym title="Cascading Style Sheets">CSS</acronym>
 
 			<p>The Slogan of our company <bdo dir="rtl">word</bdo> is "Easy Solutions | Easy Life".</p>
-
+			<div></div>
 
 			<strong>Greetings from GORZON SOLUTIONS PVT. LTD </strong>
 			
