--- a/All Assignments/CSS Assignments/company_home.html
+++ b/All Assignments/CSS Assignments/company_home.html
@@ -232,6 +232,12 @@
 			<a href="/jquery/">BCC</a>
 			</nav>
 
+			
+<form>
+First name: <input type="text" name="firstname" /><br>
+Last name: <input type="text" name="lastname" />
+</form>
+
 
 </td>
 </tr>
