--- a/All Assignments/CSS Assignments/company_home.html
+++ b/All Assignments/CSS Assignments/company_home.html
@@ -231,8 +231,9 @@
 			<a href="/js/">Youtube</a> |
 			<a href="/jquery/">BCC</a>
 			</nav>
+			<p lang="it">Ciao bella!</p>
 
-			
+
 <form>
 First name: <input type="text" name="firstname" /><br>
 Last name: <input type="text" name="lastname" />
