E:enabled E:disabled selector

--- a/All Assignments/CSS Assignments/company_home.html
+++ b/All Assignments/CSS Assignments/company_home.html
@@ -239,6 +239,13 @@ First name: <input type="text" name="firstname" /><br>
 Last name: <input type="text" name="lastname" />
 </form>
 
+<form action="">
+First name: <input type="text" value="Mickey"><br>
+Last name: <input type="text" value="Mouse"><br>
+Country: <input type="text" disabled="disabled" value="Disneyland">
+</form>
+
+
 
 </td>
 </tr>
