seduo class selector

--- a/All Assignments/CSS Assignments/company_home.html
+++ b/All Assignments/CSS Assignments/company_home.html
@@ -41,7 +41,7 @@
 			
 			<h5>Greetings from GORZON SOLUTIONS PVT. LTD </h5>
 			
-			<h6>Greetings from GORZON SOLUTIONS PVT. LTD </h6>
+			<h6 class="pastoral">Greetings from GORZON SOLUTIONS PVT. LTD </h6>
 
 </td>
 </tr>	
