--- a/All Assignments/CSS Assignments/company_home.html
+++ b/All Assignments/CSS Assignments/company_home.html
@@ -21,7 +21,9 @@
 <td>
 
 <abbr title="GORZON SOLUTIONS PVT. LTD (Easy Solutions | Easy Life)">HTML HOME PAGE OF THE COMPANY</abbr>
-			
+			<h1>Definition of the function a</h1>
+<p>Function a(x) has to be applied to all figures in the table.</p>
+<pre>function a(x) = 12x/13.5</pre>
 			<acronym title="Cascading Style Sheets">CSS</acronym>
 
 			<p>The Slogan of our company <bdo dir="rtl">word</bdo> is "Easy Solutions | Easy Life".</p>
@@ -42,6 +44,8 @@
 			<h5>Greetings from GORZON SOLUTIONS PVT. LTD </h5>
 			
 			<h6 class="pastoral">Greetings from GORZON SOLUTIONS PVT. LTD </h6>
+
+			
 
 </td>
 </tr>	
